--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
     "@wdio/selenium-standalone-service": "^7.4.2",
-    "codeceptjs": "^3.2.2",
+    "codeceptjs": "^3.3.0",
     "codeceptjs-dbhelper": "^1.2.2",
     "database-js-mysql": "^1.1.3",
     "eslint": "^7.32.0",
@@ -49,9 +49,10 @@
   "dependencies": {
     "-": "^0.0.1",
     "@types/nodemailer": "^6.4.4",
+    "D": "^1.0.0",
+    "canvas": "^2.9.0",
     "codeceptjs-chai": "^2.3.2",
     "codeceptjs-resemblehelper": "^1.9.5",
-    "D": "^1.0.0",
     "dotenv": "^10.0.0",
     "eslint-config-airbnb": "^18.2.1",
     "nodemailer": "^6.7.2",
