--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
     "@wdio/selenium-standalone-service": "^7.4.2",
-    "codeceptjs": "^3.5.7",
     "codeceptjs-dbhelper": "^1.2.2",
     "database-js-mysql": "^1.1.3",
     "eslint": "^7.32.0",
@@ -49,16 +48,21 @@
   },
   "dependencies": {
     "-": "^0.0.1",
-    "@codeceptjs/allure-legacy": "^1.0.2",
+    "@testomatio/reporter": "^1.4.1",
     "@types/nodemailer": "^6.4.4",
+    "allure-codeceptjs": "^2.15.1",
+    "codeceptjs": "^3.5.7",
     "codeceptjs-chai": "^2.3.5",
+    "cross-env": "^7.0.3",
     "D": "^1.0.0",
     "dotenv": "^10.0.0",
     "eslint-config-airbnb": "^18.2.1",
     "nodemailer": "^6.7.2",
-    "playwright": "^1.39.0",
+    "pdf-parse": "^1.1.1",
+    "playwright": "^1.43.1",
+    "tree-kill": "^1.2.2",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.4",
+    "typescript": "^4.9.5",
     "xlsx": "^0.16.9"
   }
 }
