--- a/package.json
+++ b/package.json
@@ -51,9 +51,11 @@
 	},
 	"dependencies": {
 		"-": "^0.0.1",
+		"@ai-sdk/mistral": "^1.1.12",
 		"@types/nodemailer": "^6.4.4",
+		"ai": "^4.1.45",
 		"allure-codeceptjs": "^2.15.1",
-		"codeceptjs": "^3.5.7",
+		"codeceptjs": "^3.6.4",
 		"codeceptjs-chai": "^2.3.5",
 		"cross-env": "^7.0.3",
 		"D": "^1.0.0",
